--- a/chickenfries_weather_app/src/App.css
+++ b/chickenfries_weather_app/src/App.css
@@ -1,140 +1,168 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700;800;900&display=swap");
+
+body {
+  background: no-repeat center center fixed;
+  background-size: cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1)),
+    url("./assets/cloud.jpg");
+  color: #fff;
+  font-family: "Fira Sans", sans-serif;
+}
+
 * {
   padding: 0;
   margin: 0;
-  font-family: sans-serif;
-  box-sizing: border-box;
-  color: #fff;
-  background-color: transparent;
-  
+  /* box-sizing: border-box; */
 }
 
-#container {
-  height: 100vh;
-  width: 100%;
-  position: relative;
-  background-image: url('https://source.unsplash.com/1600x900/?landscape');
-  display: flex;
+.App {
+  margin-bottom: 50px;
 }
 
-#container #location {
-  height: 60px;
-  width: 100%;
-  position: absolute;
-  left: 0%;
-  top: 11%;
+.grid-one {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 0 auto;
+  width: fit-content;
+  flex-wrap: wrap;
+}
+
+.grid-two {
+  display: flex;
   flex-direction: row;
-}
-
-#container input {
-  height: 50px;
-  width: 300px;
-  margin: 0px 20px;
-  padding: 0 20px;
-  left: 0%;
-  border: none;
-  outline: none;
-  background: white;
-  font-size: 20px;
-  color: black;
-}
-
-#container input::placeholder {
-  color: #000000d0;
-}
-
-#container input[type="submit"] {
-  cursor: pointer;
-  width: 150px;
-  background: #000000d0;
-  color: white;
-  font-weight: 700;
-  font-size: 22px;
-}
-
-#tempIcon {
-  height: 150px;
-  width: 150px;
-  position: absolute;
-  top: 35%;
-  left: 60%;
-  
-}
-
-#weatherCountry {
-  font-size: 40px;
-  position: absolute;
-  top: 37%;
-  margin-left: auto;
-  margin-right: 20%;
-}
-
-#temperature {
-  font-size: 45px;
-  position: absolute;
-  top: 45%;
-  left: 37%;
-}
-
-#temperature b {
-  color: red;
-}
-
-#weatherDescription {
-  font-size: 20px;
-  text-transform: capitalize;
-  position: absolute;
-  bottom: 38%;
-  left: 60%;
-}
-
-#container ul {
-  position: absolute;
-  bottom: 17%;
-  left: auto;
-  right: auto;
-  margin-right: 20%;
-}
-
-#container ul li {
-  font-size: 20px;
-  margin: 20px 0;
-  list-style-type: none;
-  margin-right: 5rem;
-}
-
-.features
-{
   justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 0 auto;
+  width: fit-content;
+  flex-wrap: wrap;
 }
 
-.flex
-{
-background: #000000d0;
-color: white;
-padding: 2em;
-border-radius: 30px;
-width: 100%;
-max-width: 700px;
-height: 30rem;
-margin: 1em;
-margin-top: 14rem;
-margin-left: auto;
-margin-right: auto;
-display: flex;
-justify-content: center;
+.grid-three {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 0 auto;
+  width: fit-content;
+  flex-wrap: wrap;
 }
 
-.h1
-{
-  margin-left: 28rem;
-  margin-top: 25rem;
-  font-size: 1.5rem;
-  font-family: "myFirstFont"; 
+.grid-four {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 0 auto;
+  width: fit-content;
+  flex-wrap: wrap;
 }
 
-@font-face {
-  font-family: "myFirstFont"; 
-  src: url("fonts/ticking-timebomb-bb.regular.ttf"); 
+.nav {
+  display: flex;
+  /* gap: 20px; */
+  margin: 50px auto;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 1460px;
+}
+
+.logo {
+  display: flex;
+  gap: 10px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  width: fit-content;
+  padding: 0.8em;
+  /* margin-left: 15px; */
+}
+
+.logo__icon {
+  font-size: 21.55px;
+}
+
+.logo__text {
+  font-size: 20px;
+}
+
+.switch-mode {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  width: fit-content;
+  font-size: 21.55px;
+  padding: 0.8em;
+}
+
+.switch-mode:hover {
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 1460px) {
+  .nav {
+    width: 720px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .grid-four {
+    align-items: center;
+  }
+
+  .nav {
+    margin: 50px auto;
+    width: 560px;
+  }
+
+  .logo {
+    padding: 0.8em;
+    /* margin-right: 15px; */
+  }
+
+  .logo__icon {
+    font-size: 15px;
+  }
+
+  .logo__text {
+    font-size: 15px;
+  }
+
+  .switch-mode {
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 560px) {
+  .nav {
+    margin: 50px auto;
+    width: 320px;
+    /* flex-direction: column; */
+    align-content: center;
+    justify-content: space-between;
+    padding: 0 100px;
+  }
+
+  .logo {
+    padding: 0.8em;
+    /* margin-right: 15px; */
+    display: none;
+  }
+
+  .logo__icon {
+    font-size: 15px;
+    width: fit-content;
+  }
+
+  .logo__text {
+    font-size: 15px;
+    width: fit-content;
+  }
+
+  .switch-mode {
+    font-size: 15px;
+  }
 }
